# neo4j-mcp-installer

./: .gitignore  README.md  pyproject.toml
src/neo4j_mcp_installer/: __init__.py  cli.py  installer.py
src/neo4j_mcp_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_installer.py
