[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-mcp-installer"
version = "0.1.0"
description = "Installer for the Neo4j MCP server binary"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Neo4j" }]
dependencies = ["platformdirs>=4.0.0"]

[project.scripts]
neo4j-mcp-installer = "neo4j_mcp_installer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
